    (but will be correct when updated).
  * Removed precache_on_readdir configuration option (and feature).
  * Renamed built-in extended attributes "__content_type__" and "__etag__" to 
    "s3fuse_content_type" and "s3fuse_etag", respectively.
  * Removed "__md5__" extended attribute.
  * Added note about daemon_timeout.

 -- Tarick Bedeir <tarick@bedeir.com>  Tue, 09 Dec 2012 22:14:21 -0600

s3fuse (0.12) unstable; urgency=low

  * NEW: MacOS support. See README.
  * NEW: Made AWS endpoint configurable (to support non-US buckets). 
    See README.
  * Set mount point UID/GID to process effective UID/GID.
  * Fixed extended attribute bugs.
  * Added support for curl/NSS.
  * Fixed circular ownership bug that was causing FDs to be leaked.
  * Made requirements compatible with RHEL6/Amazon Linux.
  * Fixed memory leak in CURL request code.

 -- Tarick Bedeir <tarick@bedeir.com>  Sat, 08 Sep 2012 19:36:13 -0600

s3fuse (0.11) unstable; urgency=low

  * NEW: Added Google Storage support.
  * NEW: Moved AWS keys out of s3fuse.conf. See README.
  * NEW: Changed required fields in s3fuse.conf. See README.
  * On rename, remove destination rather than failing with -EEXIST.
  * Improved error handling in FUSE init/pre-init.
  * Invalidate parent in directory cache when child is modified.
  * Fixed request error handling.
  * Increased default request timeout to 30 seconds (from 10).
  * Changed default logging level to LOG_WARNING instead of LOG_ERR.

 -- Tarick Bedeir <tarick@bedeir.com>  Fri, 15 Jul 2011 19:45:59 -0500

s3fuse (0.10) unstable; urgency=low

  * Updated usage/help message printed by main() to match arguments.
  * Added directory cache. 

 -- Tarick Bedeir <tarick@bedeir.com>  Thu, 30 Jun 2011 18:14:25 -0500

s3fuse (0.9) unstable; urgency=low

  * Moved to libxml++.

 -- Tarick Bedeir <tarick@bedeir.com>  Sun, 12 Jun 2011 17:43:26 -0500

s3fuse (0.1) unstable; urgency=low

  * Initial Release.
